--- a/assets/sass/layout/_nav.scss
+++ b/assets/sass/layout/_nav.scss
@@ -52,7 +52,8 @@
 						display: block;
 						font-size: 0.8rem;
 						outline: none;
-						padding: 0 2rem;
+						padding: 0 1.25rem;
+						white-space: nowrap;
 
 						&:hover {
 							color: var(--color-accent) !important;
